@@ -1022,6 +1022,42 @@ return|return
 name|iter
 return|;
 block|}
+DECL|method|remove
+specifier|public
+name|T
+name|remove
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+name|int
+name|idx
+init|=
+name|indexOf
+argument_list|(
+name|name
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|idx
+operator|!=
+operator|-
+literal|1
+condition|)
+return|return
+name|remove
+argument_list|(
+name|idx
+argument_list|)
+return|;
+return|return
+literal|null
+return|;
+block|}
 block|}
 end_class
 
