@@ -96,6 +96,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|CommonParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|NamedList
@@ -295,6 +311,39 @@ name|getReturnFields
 argument_list|()
 argument_list|)
 decl_stmt|;
+name|Boolean
+name|omitHeader
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getBool
+argument_list|(
+name|CommonParams
+operator|.
+name|OMIT_HEADER
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|omitHeader
+operator|!=
+literal|null
+operator|&&
+name|omitHeader
+condition|)
+name|response
+operator|.
+name|getValues
+argument_list|()
+operator|.
+name|remove
+argument_list|(
+literal|"responseHeader"
+argument_list|)
+expr_stmt|;
 name|NamedListCodec
 name|codec
 init|=
