@@ -82,6 +82,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|CommonParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|NamedList
@@ -454,6 +470,39 @@ literal|"("
 argument_list|)
 expr_stmt|;
 block|}
+name|Boolean
+name|omitHeader
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getBool
+argument_list|(
+name|CommonParams
+operator|.
+name|OMIT_HEADER
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|omitHeader
+operator|!=
+literal|null
+operator|&&
+name|omitHeader
+condition|)
+name|rsp
+operator|.
+name|getValues
+argument_list|()
+operator|.
+name|remove
+argument_list|(
+literal|"responseHeader"
+argument_list|)
+expr_stmt|;
 name|writeNamedList
 argument_list|(
 literal|null
