@@ -564,6 +564,36 @@ operator|.
 name|getValues
 argument_list|()
 decl_stmt|;
+name|Boolean
+name|omitHeader
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getBool
+argument_list|(
+name|CommonParams
+operator|.
+name|OMIT_HEADER
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|omitHeader
+operator|!=
+literal|null
+operator|&&
+name|omitHeader
+condition|)
+name|lst
+operator|.
+name|remove
+argument_list|(
+literal|"responseHeader"
+argument_list|)
+expr_stmt|;
 name|int
 name|sz
 init|=
